// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispatcher, Store & Container should work together properly 1`] = `
<span>
  
</span>
`;

exports[`Dispatcher, Store & Container should work together properly 2`] = `
<span>
  
</span>
`;

exports[`Dispatcher, Store & Container should work together properly 3`] = `
<span>
  foo
</span>
`;

exports[`Dispatcher, Store & Container should work together properly 4`] = `
<span>
  foo-bar
</span>
`;

exports[`Dispatcher, Store & Container should work together properly 5`] = `
<span>
  baz
</span>
`;

exports[`Dispatcher, Store & Container should work together properly 6`] = `
<span>
  baz-bar
</span>
`;
